# aashi-jarvish

./: .env.example  .gitignore  README.md  aashi_memory.json  main.py  pyproject.toml  requirements.txt  run_ui.py
aashi/: __init__.py  ai.py  assistant.py  clone_voice.py  config.py  env_loader.py  gui.py  memory.py  system_control.py  voice.py  voice_input.py
aashi/pipeline/: __init__.py  brain.py  input_layer.py  planner.py  response.py  router.py  tools.py  types.py
ashi_os/: README.md  __init__.py  main.py
ashi_os/agents/: __init__.py  coordinator.py  execution_agent.py  memory_agent.py  research_agent.py  supervisor_agent.py  types.py  validation_agent.py
ashi_os/api/: app.py  routes_admin.py  routes_agents.py  routes_chat.py  routes_tools.py  routes_voice.py
ashi_os/brain/: __init__.py  confirmation.py  context_manager.py  llm_router.py  orchestrator.py  planning.py  system_prompt.py
ashi_os/core/: __init__.py  config.py  models.py  security.py
ashi_os/logging/: __init__.py  audit_log.py  logger.py
ashi_os/memory/: embeddings.py  memory_service.py  vector_store.py
ashi_os/tests/: test_agents_coordinator.py  test_context_manager.py  test_llm_router.py  test_memory_service.py  test_planning_engine.py  test_tool_executor.py  test_voice_wake_word.py
ashi_os/tools/: __init__.py  browser.py  code_runner.py  email_module.py  executor.py  filesystem.py  scheduler.py  system_control.py
ashi_os/voice/: __init__.py  continuous.py  listener.py  mic_capture.py  stt.py  tts.py  wake_word.py
