[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashi-os"
version = "0.1.0"
description = "ASHI Phase 1 core AI brain service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "chromadb>=0.5.0",
  "openai>=1.0.0",
  "ollama>=0.4.0",
  "structlog>=24.2.0",
  "rich>=13.7.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["ashi_os*"]

[tool.pytest.ini_options]
testpaths = ["ashi_os/tests"]
